bin_PROGRAMS = skeldal
skeldal_SOURCES = cztable.cpp game/automap.c game/builder.c game/clk_map.c \
	game/dialogs.c game/dump.c game/enemy.c game/engine1.c \
	game/engine2.c game/gamesave.c game/globmap.c game/chargen.c \
	game/interfac.c game/inv.c game/book.c game/magic.c game/macros.c \
	game/menu.c game/realgame.c game/setup.c game/skeldal.c game/music.c \
	game/combat.c game/specproc.c libs/basicobj.c libs/bgraph2a.c \
	libs/bgraph2.c libs/bmouse.c libs/devices.c libs/event.c libs/gui.c \
	libs/inicfg.c libs/memman.c libs/mgifmapmem.c libs/mgifmem.c \
	libs/mgifplaya.c libs/pcx.c libs/strlite.c libs/swaper.c \
	libs/wav_mem.c libs/sound.c sdl/input.c sdl/mixer.c sdl/screen.c \
	sdl/sound.c sdl/timer.c unix/init.c unix/system.c unix/task.c \
	game/extras.h game/specproc.h game/globals.h game/engine1.h \
	game/wizard.h game/version.h libs/devices.h libs/mgfplay.h \
	libs/gui.h libs/pcx.h libs/wav.h libs/strlite.h libs/sound.h \
	libs/wav_mem.h libs/mgifmem.h libs/event.h libs/bmouse.h \
	libs/types.h libs/basicobj.h libs/system.h libs/mgifmapmem.h \
	libs/bgraph.h libs/strlists.h libs/inicfg.h libs/memman.h \
	unix/system.h lzwc.h cztable.h
