bin_PROGRAMS = skeldal
skeldal_SOURCES = cztable.cpp game/automap.cpp game/builder.cpp \
	game/clk_map.cpp game/dialogs.cpp game/dump.cpp game/enemy.cpp \
	game/engine1.cpp game/gamesave.cpp game/globmap.cpp \
	game/chargen.cpp game/interfac.cpp game/inv.cpp game/book.cpp \
	game/magic.cpp game/macros.cpp game/menu.cpp game/realgame.cpp \
	game/setup.cpp game/skeldal.cpp game/music.cpp game/combat.cpp \
	game/specproc.cpp libs/basicobj.cpp libs/bgraph2a.cpp \
	libs/bgraph2.cpp libs/bmouse.cpp libs/devices.cpp libs/event.cpp \
	libs/gui.cpp libs/inicfg.cpp libs/memman.cpp libs/mgifmapmem.cpp \
	libs/mgifmem.cpp libs/pcx.cpp libs/strlite.cpp \
	libs/wav_mem.cpp libs/sound.cpp sdl/input.cpp \
	sdl/mixer.cpp sdl/screen.cpp sdl/sound.cpp sdl/timer.cpp \
	unix/init.cpp unix/system.cpp unix/task.cpp game/extras.h \
	game/specproc.h game/globals.h game/engine1.h game/wizard.h \
	game/version.h libs/devices.h libs/mgfplay.h libs/gui.h libs/pcx.h \
	libs/strlite.h libs/sound.h libs/wav_mem.h libs/mgifmem.h \
	libs/event.h libs/bmouse.h libs/basicobj.h libs/system.h \
	libs/mgifmapmem.h libs/bgraph.h libs/strlists.h libs/inicfg.h \
	libs/memman.h sdl/screen.h unix/system.h lzwc.h cztable.h
AM_CPPFLAGS = -DDATADIR='"$(pkgdatadir)"'
